--- a/style.css
+++ b/style.css
@@ -125,6 +125,11 @@ div.wrap.content {
 	text-align: center;
 }
 
+.kategori img {
+	width 80px;
+	height 80px;
+}
+
 a {
 	text-decoration: none;
 	color: black;
