Endrer info-liste-bilde

--- a/style.css
+++ b/style.css
@@ -237,11 +237,11 @@ img.desaturate{
 }
 
 .info {
-	list-style-image: url('/img/litensign44.svg');
+	list-style-image: url('/img/info3.svg');
 }
 
 .viktiginfo {
-	list-style-image: url('/img/viktiginfo.svg');
+	list-style-image: url('/img/viktiginfo3.svg');
 }
 
 /* Footer */
