--- a/style.css
+++ b/style.css
@@ -289,6 +289,11 @@ footer {
 	.content article {
 		width: 50%;
 	}
+
+	div.wrap.content.semester {
+		padding-left: 0em;
+	}
+
 }
 
 @media (max-width: 500px) {
