--- a/style.css
+++ b/style.css
@@ -134,7 +134,16 @@ a {
 	color: black;
 }
 
+p.underkonstruksjon {
+	padding-top: 2em;
+	text-align: center;
+}
+
 /* Styling for semestervalg */
+div.wrap.content.semester {
+	padding-left: 2em;
+}
+
 .content article .semester {
 	padding-left: 1.5em;
 }
