--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ header {
 }
 
 .wrap {
-	max-width: 1000px;
+	max-width: 1600px;
 	margin: 0 auto;
 	padding: 1em;
+	padding-left: 7%;
 }
 
 header .wrap {
@@ -59,6 +60,7 @@ nav {
 
 nav .wrap {
 	padding: 0.5em 0;
+	padding-left: 7%;
 }
 
 nav li {
@@ -98,6 +100,7 @@ div.wrap.content {
 	/*text-align: center;*/
 	padding: 1em;
 	width: 33.3333%;
+	padding-top: 1%;
 }
 
 .content article ul {
