--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ nav .wrap {
 nav li {
 	display: inline;
 	padding-left: 1em;
+	white-space: nowrap;
 }
 
 nav a {
@@ -101,6 +102,7 @@ div.wrap.content {
 	padding: 1em;
 	width: 33.3333%;
 	padding-top: 1%;
+	white-space: nowrap; /* Ingen line break i list items under fag */
 }
 
 .content article ul {
@@ -305,6 +307,10 @@ footer {
 }
 
 @media (max-width: 500px) {
+	.wrap {
+		padding-left: 6%; /* For riktig center allignment på telefon */
+	}
+
 	header .logo {
 		width: 40px;
 	}
@@ -339,7 +345,7 @@ footer {
 	}
 
 	.content img {
-		margin-top: 1em;
+		margin-top: 1.5em; /* Litt spacing mellom fagene på mobilversjon */
 	}
 
 	.content article ul {
