--- a/style.css
+++ b/style.css
@@ -278,6 +278,10 @@ img.desaturate{
 	list-style-image: url('/img/movie43.svg');
 }
 
+.formelark {
+	list-style-image: url('/img/sigma1.svg');
+}
+
 /* Footer */
 
 footer {
