--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
 /* Header (logo & site name) */
 header {
 	background: #333333;
+}
+
+header a {
 	color: white;
 }
 
@@ -32,6 +35,86 @@ header .logo {
 	width: 60px;
 	margin-right: 0.5em;
 	margin-bottom: 1em;
+}
+
+/* Hovereffekt på logo */
+@-webkit-keyframes movingflame {
+	0% { -webkit-transform: scale(1); }
+	25% { -webkit-transform: scale(0.85); }
+	50% { -webkit-transform: scale(1); }
+	75% { -webkit-transform: scale(1.15); }
+	100% { -webkit-transform: scale(1); }
+}
+
+/* Need to manage svg origin for scaling in firefox
+@keyframes movingflame {
+	0% { transform: scale(1); }
+	25% { transform: scale(0.85); }
+	50% { transform: scale(1); }
+	75% { transform: scale(1.15); }
+	100% { transform: scale(1); }
+}
+*/
+
+@-webkit-keyframes movingmist {
+	0% { -webkit-transform: translate(0) scale(1); }
+	25% { -webkit-transform: translate(-3px) scale(0.8); }
+	50% { -webkit-transform: translate(0px) scale(1); }
+	75% { -webkit-transform: translate(+3px) scale(1.2); }
+	100% { -webkit-transform: translate(0) scale(1); }
+}
+
+/* Need to manage svg origin for scaling in firefox
+@keyframes movingmist {
+	0% { transform: translate(0) scale(1); }
+	25% { transform: translate(-3px) scale(0.8); }
+	50% { transform: translate(0px) scale(1); }
+	75% { transform: translate(+3px) scale(1.2); }
+	100% { transform: translate(0) scale(1); }
+} */
+
+header a:hover #flame {
+	fill: #E25822; /* Making flames red on hover */
+	-webkit-animation-name: movingflame;
+	-webkit-animation-duration: 450ms;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+	/* Need to manage svg origin for scaling in firefox
+	animation-name: movingflame;
+	animation-duration: 450ms;
+	transform-origin:50% 50%;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+	*/
+}
+
+header a:hover #mist {
+	fill: #cce5ff;
+	-webkit-animation-name: movingmist;
+	-webkit-animation-duration: 1200ms;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+	/* Need to manage svg origin for scaling in firefox
+	animation-name: movingmist;
+	animation-duration: 1200ms;
+	transform-origin: 50% 50%;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+	*/
+}
+
+header a:hover #pot {
+	fill: silver;
+}
+
+header a:hover #stove {
+	fill: silver;
+}
+
+header a:hover {
+	color: silver;
 }
 
 .thin {
@@ -83,6 +166,9 @@ nav a {
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
 	justify-content: center;
+	zoom: 0.935; /* Scaling to fit page on MacBook Pro */
+	-moz-transform: scale(0.935);
+	-moz-transform-origin: 50% 50% 0
 }
 
 div.wrap.content {
