--- a/style.css
+++ b/style.css
@@ -253,87 +253,87 @@ img.desaturate{
 /* Stil på punktlistene */
 
 .fp {
-	list-style-image: url('/img/event5.svg');
+	list-style-image: url('/img/fp_link.svg');
 }
 
 .ov {
-	list-style-image: url('/img/blank32.svg');
+	list-style-image: url('/img/ov_link.svg');
 }
 
 .lf {
-	list-style-image: url('/img/checked18.svg');
+	list-style-image: url('/img/lf_link.svg');
 }
 
 .eks {
-	list-style-image: url('/img/file98.svg');
+	list-style-image: url('/img/eks_link.svg');
 }
 
 .itl {
-	list-style-image: url('/img/itllogo.svg');
+	list-style-image: url('/img/itl_link.svg');
 }
 
 .epost {
-	list-style-image: url('/img/origami6.svg');
+	list-style-image: url('/img/epost_link.svg');
 }
 
 .middag {
-	list-style-image: url('/img/cutlery6.svg');
+	list-style-image: url('/img/middag_link.svg');
 }
 
 .software {
-	list-style-image: url('/img/dvd9.svg');
+	list-style-image: url('/img/software_link.svg');
 }
 
 .ibok {
-	list-style-image: url('/img/books30.svg');
+	list-style-image: url('/img/ibok_link.svg');
 }
 
 .nabla {
-	list-style-image: url('/img/litennabla.svg');
+	list-style-image: url('/img/nabla_link.svg');
 }
 
 .fb {
-	list-style-image: url('/img/facebook42.svg');
+	list-style-image: url('/img/fb_link.svg');
 }
 
 .samfundet {
-	list-style-image: url('/img/hand6');
+	list-style-image: url('/img/samfundet_link.svg');
 }
 
 .bartebuss {
-	list-style-image: url('/img/vehicle12.svg');
+	list-style-image: url('/img/bartebuss_link.svg');
 }
 
 .pensum {
-	list-style-image: url('/img/checking1.svg');
+	list-style-image: url('/img/pensum_link.svg');
 }
 
 .stoffkartotek {
-	list-style-image: url('/img/flask.svg');
+	list-style-image: url('/img/stoffkartotek_link.svg');
 }
 
 .bok {
-	list-style-image: url('/img/open161.svg');
+	list-style-image: url('/img/bok_link.svg');
 }
 
 .info {
-	list-style-image: url('/img/info3.svg');
+	list-style-image: url('/img/info_link.svg');
 }
 
 .viktiginfo {
-	list-style-image: url('/img/viktiginfo3.svg');
+	list-style-image: url('/img/viktiginfo_link.svg');
 }
 
 .video {
-	list-style-image: url('/img/movie43.svg');
+	list-style-image: url('/img/video_link.svg');
 }
 
 .formelark {
-	list-style-image: url('/img/sigma1.svg');
+	list-style-image: url('/img/formelark_link.svg');
 }
 
 .quiz {
-	list-style-image: url('/img/quiz.svg');
+	list-style-image: url('/img/quiz_link.svg');
 }
 
 /* Footer */
