Adding WolframAlpha and Symbolab to resources and removing depricated concerts in Trondheim link

--- a/style.css
+++ b/style.css
@@ -336,6 +336,14 @@ img.desaturate{
 	list-style-image: url('/img/quiz_link.svg');
 }
 
+.wolframalpha {
+	list-style-image: url('/img/wolframalpha_link.svg');
+}
+
+.symbolab {
+	list-style-image: url('/img/symbolab_link.svg');
+}
+
 /* Footer */
 
 footer {
