--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav .wrap {
 }
 
 nav li {
-	display: inline;
+	display: inline-block;
 	padding-left: 1em;
 	white-space: nowrap;
 }
@@ -87,6 +87,7 @@ nav li {
 nav a {
 	color: white;
 	text-decoration: none;
+	display: block;
 }
 
 .arkiv img {
@@ -413,11 +414,11 @@ article form p {
 
 @media (max-width: 500px) {
 	.wrap {
-		padding-left: 6%; /* For correct center allignment on mobile screens */
+		padding-left: 0%; /* For correct center allignment on mobile screens */
 	}
 
 	div.wrap.content.semester {
-		padding-left: 6%; /* For correct center allignment on mobile screens on the semester choice screen */
+		padding-left: 0%; /* For correct center allignment on mobile screens on the semester choice screen */
 	}
 
 	header .logo {
@@ -431,9 +432,15 @@ article form p {
 	nav li {
 		display: block;
 		text-align: center;
-		padding: 0.5em;
+		padding: 0.35em;
 		position: relative;
 		left: -4%;
+		font-size: 140%;
+		border-bottom: 0.1em solid grey;
+	}
+
+	nav li:last-child {
+		border-bottom: none;
 	}
 
 	.content article {
@@ -453,6 +460,7 @@ article form p {
 		width:200px;
 		margin:0 auto;
 		text-align:left;
+		font-size: 150%;
 	}
 
 	.content img {
