--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@ nav li {
 	display: inline-block;
 	padding-left: 1em;
 	white-space: nowrap;
+	position: relative;
+	top: -0.2em;
 }
 
 nav a {
@@ -92,6 +94,11 @@ nav a {
 
 .arkiv img {
 	padding-left: 0.3em;
+}
+
+.tannhjul {
+	position: relative;
+	top: 0.25em;
 }
 
 /* Content */
