--- a/style.css
+++ b/style.css
@@ -486,3 +486,53 @@ article form p {
 		margin-top: 0.3em;
 	}
 }
+
+/* Hover effect on kvantefysikk article
+Source: http://stackoverflow.com/questions/23723060/speech-bubble-tooltip-for-images-instead-of-links
+*/
+div.hoverbubble span {display: none;}
+@media (min-width: 500px) {
+	div.hoverbubble {
+	  position: relative;
+	  text-decoration: none;
+	  width:50px;
+	  height:50px;
+	}
+
+	#kvante-list {
+		padding-top: 3.6em;
+	}
+
+	div.hoverbubble:hover span {
+		display: block;
+		position: absolute;
+		padding: .5em;
+		content: attr(title);
+		min-width: px;
+		text-align: center;
+		width: auto;
+		height: auto;
+		white-space: nowrap;
+		top: -15px;
+		left: -28em;
+		background: rgba(154,153,154,1);
+		-moz-border-radius: 10px;
+		-webkit-border-radius: 10px;
+		border-radius: 10px;
+		color: #fff;
+		font-size: 0.86em;
+	}
+	div.hoverbubble:hover span:after {
+		position: absolute;
+		display: block;
+		content: "";
+		border-color: rgba(154,153,154,1) transparent transparent transparent;
+		border-style: solid;
+		border-width: 10px;
+		height: 0;
+		width: 0;
+		position: absolute;
+		bottom: -19px;
+		left: 28em;
+	}
+}
